# python-project-lvl1

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: linter.yml
brain_games/: engine.py  game_logic.py  load_game.py
brain_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_games_script.py  brain_gcd.py  brain_prime.py  brain_progression.py
